scrollbar in zone page fixed

--- a/src/Zone.css
+++ b/src/Zone.css
@@ -186,15 +186,22 @@ nav a:nth-child(4):hover~span{
     align-items: center;
     gap:5px;
     /* overflow-x: hidden; */
-    overflow-y: scroll;
+    overflow-y: hidden;
     scroll-behavior: smooth;
     /* scrollbar-width: 0; */
     /* border:2px solid white;
     border-radius: 2%; */
  }
- .slider-container::-webkit-scrollbar{
-    display: none;
+ .slider-container:hover{
+    overflow-y: scroll;
  }
+ /* .slider-container::-webkit-scrollbar:hover{
+    width:20px;
+ } */
+
+ /* .slider-container::-webkit-scrollbar-thumb {
+    background-color: red
+  }  */
  
  .slider-box{
     
